fix table overflow display and fixed footer

--- a/prototype/assets/scss/components/_scaffolding.scss
+++ b/prototype/assets/scss/components/_scaffolding.scss
@@ -1,8 +1,8 @@
 body, .application {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   margin: 0;
+  min-height: 93vh; // weird setting is fix for footer display on iOS
 }
 
 .application {
