--- a/prototype/assets/scss/components/_tables.scss
+++ b/prototype/assets/scss/components/_tables.scss
@@ -13,10 +13,12 @@
     align-items: center;
     padding: 25px;
     overflow-x: scroll;
-    border-right: 25px solid transparent;
     
     @media #{$medium-and-up} {
       flex-flow: row nowrap;
+      border-left: 25px solid transparent;
+      border-right: 25px solid transparent;
+      padding: 25px 0;
     }
   }
 
@@ -33,24 +35,30 @@
     }
 
     &.data-icon {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: $primary-color;
-      border-radius: 100%;
-      color: $white;
-      height: 60px;
-      width: 60px;
+      display: none;
+
+      @media #{$medium-and-up} {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: $primary-color;
+        border-radius: 100%;
+        color: $white;
+        height: 60px;
+        width: 60px;
+      }
     }
 
     &.data-main {
       @extend .card-title;
       text-align: left;
-      max-width: 64%;
+      width: 100%;
+      margin: 0;
 
       @media #{$medium-and-up} {
-        max-width: none;
-        width: 25%;
+        width: auto;
+        min-width: 25%;
+        margin: 0 15px;
       }
     }
 
